Support checkout session API method